knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Operational_Structure__c/Operational_Structure__c.object-meta.xml
<CustomObject>
    <label>Operational Structure</label>
    <nameField>
        <displayFormat>Ops-{0000}</displayFormat>
        <label>Operational Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>