knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Operational_Structure__c/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <inlineHelpText>Client Operations: Region Staffing Operations: Team (Lowest level of the structure)</inlineHelpText>
    <label>Level 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>