knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Operational_Structure__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <inlineHelpText>Client Operations: Division Staffing Operations: Group (Highest level of the structure)</inlineHelpText>
    <label>Level 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>